# Crashlogs

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TestTool.cpp  crashlogs.cpp  crashlogs.h
tests/: TestTool.cpp
