cmake_minimum_required(VERSION 3.21)
project(Crashlogs CXX)

add_library(Crashlogs STATIC)
if(WIN32)
  target_sources(Crashlogs PRIVATE crashlogs.cpp)
  target_compile_definitions(Crashlogs PRIVATE _CRT_SECURE_NO_WARNINGS)
endif()
target_include_directories(Crashlogs PUBLIC "\$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}>")
target_compile_features(Crashlogs PUBLIC cxx_std_23)

set(CMAKE_INSTALL_INCLUDEDIR include/Crashlogs CACHE PATH "")
include(GNUInstallDirs)
install(FILES crashlogs.h DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}")
install(TARGETS Crashlogs EXPORT CrashlogsConfig INCLUDES DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}")
install(EXPORT CrashlogsConfig NAMESPACE Crashlogs:: DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/Crashlogs")
